--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ kotlin-logging = "7.0.0"
 koin = "4.0.1"
 junit5 = "5.11.2"
 android-junit5-plugin = "1.11.2.0"
+assertj = "3.24.2"
 mockk = "1.13.14"
 mockk-android = "1.13.14"
 mockk-agent = "1.13.14"
@@ -25,6 +26,7 @@ koin = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
 junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit5" }
 junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit5" }
 junit-jupiter-params = { group = "org.junit.jupiter", name = "junit-jupiter-params", version.ref = "junit5" }
+assertj-core = { group = "org.assertj", name = "assertj-core", version.ref = "assertj" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockk-android" }
 mockk-agent = { group = "io.mockk", name = "mockk-agent", version.ref = "mockk-agent" }
